<resources>
    <string name="app_name">vi_db</string>
    <string name="load_tasks">IN</string>
    <string name="unload_tasks">OUT</string>
    <string name="empty">1</string>

    <string name="CARD_INDICATOR_HINT">Введите значение</string>
    <string name="CARD_RECORD_BUTTON">записать</string>
    <string name="CARD_TITLE">голосовой прием показаний</string>
    <string name="CARD_ELECTRICITY">Электроэнергия</string>
    <string name="CARD_HOT_WATER">ГВС</string>
    <string name="CARD_COLD_WATER">ХВС</string>
    <string name="CARD_ID">Cчёт\\Номер</string>
    <string name="CARD_INDICATOR_ID">Номер счетчика</string>
    <string name="CARD_ID_PLACEHOLDER">00000 000000</string>
    <string name="CARD_INDICATOR_ID_PLACEHOLDER">000000000000</string>
    <string name="CARD_COMMON_PLACEHOLDER">Тут должно быть значение</string>
    <string name="CARD_ADDRESS">Адрес</string>

    <string name="ROUT_CARD_STATUS_PROCESS">взято в работу</string>
    <string name="ROUT_CARD_TITLE_PLACEHOLDER">Прием показаний от 01.01.1970 00:00</string>
    <string name="ROUT_CARD_ADDRESS_PLACEHOLDER_FULL">Тут должен быть адрес в две строки, просто верь этой надписи.\nМолодец, поверил!)</string>
    <string name="ROUT_CARD_DATE_PLACEHOLDER">До 01.01.1970</string>
    <string name="ROUT_CARD_PREV_DATE_PLACEHOLDER">Предыдущее от 01.01.1970</string>
    <string name="ROUT_CARD_CURRENT_DATE_PLACEHOLDER">Текущее от 01.01.1970</string>
    <string name="ROUT_CARD_PERSON_PLACEHOLDER">Клиент</string>
    <string name="ROUT_CARD_STATUS_WAIT">Ожидает выполнения</string>
    <string name="ROUT_CARD_STATUS_DEAD">Отменен</string>
    <string name="ROUT_TITLE">Маршрутный лист</string>
    <string name="COMMON_TEXT_PLACEHOLDER">PLACEHOLDER</string>
    <string name="COMMON_CURRENT_VALUE">Текущее значение</string>
    <string name="ROUT_CARD_STATUS_DONE">Завершено</string>

    <string name="permission_required">Пожалуйста, предоставьте приложению права на использование микрофона…</string>
    <string name="start_service">1</string>
    <string name="stop_service">0</string>

    <string name="my_service_name">com.sac.speechdemo.MyService</string>
    <string name="NEW_01_01_1970">Новое от 01.01.1970</string>
    <string name="COMMON_NEW_VALUE">Новое значение</string>
    <string name="KEY_WORD_ACTIVATION">проверка</string>
    <string name="KEY_WORD_DEACTIVATION">стоп</string>
    <string name="KEY_WORD_EXIT">выход</string>
    <string name="KEY_WORD_UPDATE">обновить</string>
    <string name="KEY_WORD_UPLOAD">выгрузить</string>
    <string-array name="KEY_WORD_SEARCH_BY_NUMBER">
        <item>поиск по номеру</item>
        <item>поиск по номер</item>
        <item>поиск номеру</item>
        <item>поиск номер</item>
    </string-array>
    <string-array name="KEY_WORDS_SEARCH_BY_ID">
        <item>поиск по счётчику</item>
        <item>поиск по счётчик</item>
        <item>поиск счётчику</item>
        <item>поиск счётчик</item>
    </string-array>
    <string-array name="KEY_WORDS_SEARCH_BY_ROOM">
        <item>поиск по квартире</item>
        <item>поиск по квартир</item>
        <item>поиск квартире</item>
        <item>поиск квартир</item>
    </string-array>

</resources>
