<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardMainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBackground"
    android:orientation="vertical"
    tools:context="com.qavan.voice_inspector.RouteActivity">

    <LinearLayout
        android:id="@+id/textViewTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/CARD_TITLE"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorBlackPrimaryNotSoLightOP50"
            android:textDirection="inherit"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:id="@+id/idLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="35dp">

            <LinearLayout
                android:id="@+id/counterId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="25dp">

                <TextView
                    android:id="@+id/textViewCounterId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CARD_INDICATOR_ID"
                    android:textColor="@color/colorBlackPrimaryLightOP45"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewCounterIdNumbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CARD_INDICATOR_ID_PLACEHOLDER"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlackPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="25dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/textViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CARD_ID"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlackPrimaryLightOP45"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewIdNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CARD_ID_PLACEHOLDER"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlackPrimary"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hotWaterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewHotWater"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/CARD_ELECTRICITY"
                android:textColor="@color/colorBlackPrimary"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/CARD_INDICATOR_HINT"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="false"
                android:textColorHint="@color/colorOfActivity"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/coldWaterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewColdWater"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/CARD_HOT_WATER"
                android:textColor="@color/colorBlackPrimary"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/CARD_INDICATOR_HINT"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/colorOfActivity"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/electricityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewElectricity"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:text="@string/CARD_COLD_WATER"
                android:textColor="@color/colorBlackPrimary"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/CARD_INDICATOR_HINT"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/colorOfActivity"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="184dp"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/button_shape_blue"
                android:text="@string/CARD_RECORD_BUTTON"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>