<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/routeLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F0F7"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/textViewTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="-15dp"
        android:gravity="bottom|center_vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:paddingStart="18dp"
            android:paddingEnd="0dp"
            android:text="@string/ROUT_TITLE"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/colorBlackPrimaryNotSoLight"
            android:textDirection="inherit"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-20dp"
            android:layout_weight="1"
            android:text="@string/ROUT_CHECKBOX_TEXT"
            android:textColor="@color/colorBlackPrimaryLight" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/cardsScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/cardsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8F0F7"
            android:fadeScrollbars="false"
            android:gravity="center|top"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewProcess"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:background="#FFFFFF"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="false"
                        android:ems="10"
                        android:fontFamily="@font/roboto"
                        android:letterSpacing="0"
                        android:text="@string/ROUT_CARD_STATUS_PROCESS"
                        android:textAllCaps="true"
                        android:textColor="@color/addGreen"
                        android:textSize="12sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/ROUT_CARD_TITLE_PLACEHOLDER"
                        android:textColor="@color/colorBlackPrimary"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/ROUT_CARD_ADDRESS_PLACEHOLDER_FULL"
                        android:textColor="@color/colorBlackPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/ROUT_CARD_DATE_PLACEHOLDER"
                            android:textColor="@color/colorBlackPrimaryLight"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto"
                            android:text="@string/ROUT_CARD_PERSON_PLACEHOLDER"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorBlackPrimaryLight"
                            android:textSize="14sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewWait"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:background="#FFFFFF"
                android:visibility="visible"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="false"
                        android:ems="10"
                        android:fontFamily="@font/roboto"
                        android:letterSpacing="0"
                        android:text="@string/ROUT_CARD_STATUS_WAIT"
                        android:textAllCaps="true"
                        android:textColor="@color/addOrange"
                        android:textSize="12sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/ROUT_CARD_TITLE_PLACEHOLDER"
                        android:textColor="@color/colorBlackPrimary"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/ROUT_CARD_ADDRESS_PLACEHOLDER_FULL"
                        android:textColor="@color/colorBlackPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView42"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/ROUT_CARD_DATE_PLACEHOLDER"
                            android:textColor="@color/colorBlackPrimaryLight"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/textView52"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto"
                            android:text="@string/ROUT_CARD_PERSON_PLACEHOLDER"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorBlackPrimaryLight"
                            android:textSize="14sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDead"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:background="#FFFFFF"
                android:visibility="visible"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="false"
                        android:ems="10"
                        android:fontFamily="@font/roboto"
                        android:letterSpacing="0"
                        android:text="@string/ROUT_CARD_STATUS_DEAD"
                        android:textAllCaps="true"
                        android:textColor="@color/addRed"
                        android:textSize="12sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/ROUT_CARD_TITLE_PLACEHOLDER"
                        android:textColor="@color/colorBlackPrimary"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/ROUT_CARD_ADDRESS_PLACEHOLDER_FULL"
                        android:textColor="@color/colorBlackPrimary"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView43"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/ROUT_CARD_DATE_PLACEHOLDER"
                            android:textColor="@color/colorBlackPrimaryLight"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/textView53"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto"
                            android:text="@string/ROUT_CARD_PERSON_PLACEHOLDER"
                            android:textAlignment="textEnd"
                            android:textColor="@color/colorBlackPrimaryLight"
                            android:textSize="14sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTemp"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:background="#FFFFFF"
                android:visibility="gone"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="false"
                        android:ems="10"
                        android:fontFamily="@font/roboto"
                        android:letterSpacing="0"
                        android:text="@string/ROUT_CARD_STATUS_PROCESS"
                        android:textAllCaps="true"
                        android:textColor="#53AB78"
                        android:textSize="12sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/ROUT_CARD_TITLE_PLACEHOLDER"
                        android:textColor="#1A3951"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/ROUT_CARD_ADDRESS_PLACEHOLDER_FULL"
                        android:textColor="#1A3951"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView44"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/ROUT_CARD_DATE_PLACEHOLDER"
                            android:textColor="#731A3951"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/textView54"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto"
                            android:text="@string/ROUT_CARD_PERSON_PLACEHOLDER"
                            android:textAlignment="textEnd"
                            android:textColor="#731A3951"
                            android:textSize="14sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>